monitoring-app-v2/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitoring-app-v2
  namespace: leet-monitor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: monitoring-app-v2
  template:
    metadata:
      labels:
        app: monitoring-app-v2
    spec:
      containers:
        - name: web
          image: programmeradmin25/monitoring-app-v2:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
