monitoring-app-v2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-app-v2
  namespace: leet-monitor
spec:
  selector:
    app: monitoring-app-v2
  ports:
    - name: http
      port: 80
      targetPort: 8080
